...
                android:textColor="@android:color/white"
                android:visibility="gone"
                android:elevation="2dp"
                />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/dialogEventSignButton"
                style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:elevation="2dp"
                android:text="Sign Up"
...
